--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DB_URI=mongodb://localhost:27017/Main_database
+DB_URI=mongodb+srv://abebewolde285:fJSvDZQXItDVfelR@cluster0.i8dl5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET = Firfir-tera_secret
 JWT_EXPIRES = 3d
