--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "cloudinary": "^1.41.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "postcss": "^8.4.47",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.3",
