--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5"
   },
