--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "cloudinary": "^1.41.3",
+    "emailjs-com": "^3.2.0",
     "multer-storage-cloudinary": "^4.0.0",
     "postcss": "^8.4.47",
     "postcss-cli": "^9.1.0",
