--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@typegoose/typegoose": "^12.0.0",
+    "@types/aws-lambda": "^8.10.145",
     "@types/multer": "^1.4.11",
+    "@vendia/serverless-express": "^4.12.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
