--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,5 +9,17 @@
       "dest": "/api/$1",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://firfir-tera.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,HEAD,PUT,PATCH,POST,DELETE" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
   ]
 }
+
