--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,20 +4,20 @@
     { "src": "src/main.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    { 
-      "src": "/(.*)", 
+    {
+      "src": "/(.*)",
       "dest": "/api/$1",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"] 
     }
   ],
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,HEAD,PUT,PATCH,POST,DELETE" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://firfir-tera.vercel.app" }, 
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, PATCH, DELETE, OPTIONS" },
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+        { "key": "Access-Control-Allow-Credentials", "value": "true" } 
       ]
     }
   ]
