--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.6",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.6",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
+    "@netlify/functions": "^2.8.2",
     "@typegoose/typegoose": "^12.0.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/multer": "^1.4.11",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "express": "^4.21.1",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
