--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,15 +3,10 @@
   "builds": [
     { "src": "api/main.ts", "use": "@vercel/node" }
   ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://firfir-tera.vercel.app" }, 
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, PATCH, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" } 
-      ]
-    }
-  ]
+  "routes":[
+        {
+            "src":"/api/(.*)",
+            "dest":"/api" 
+        }
+    ]
 }
